Some additions to swagger code (swaggger-codegen does not work)
